fix font-size for project thumbnail button on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1623,7 +1623,7 @@ section {
         // );
         color: rgb(255, 255, 255);
         @media (max-width: 660px) {
-          font-size: 0.8em;
+          font-size: 2em;
           padding: 10px;
         }
         font-weight: 600;
